<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.example.lsy.myapp.RegisterActivity">

    <!-- Login progress -->
    <RelativeLayout
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <Button
            android:id="@+id/register_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/close"
            android:layout_alignParentLeft="true"
            android:background="@color/bg_topbar"
            android:textSize="18dp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_launcher_round" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <AutoCompleteTextView
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/text_gray"
                    android:textColor="@color/text_black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/div_white"
                    android:maxLines="1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/text_gray"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_black"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_alignParentBottom="true"
                android:background="@color/div_white"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:id="@+id/pswd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pswd1"
                    android:textColorHint="@color/text_gray"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/text_black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/div_white"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <EditText
                    android:id="@+id/pswd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pswd2"
                    android:textColorHint="@color/text_gray"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/text_black"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/div_white"
                    />
            </RelativeLayout>
            <Button
                android:id="@+id/register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register_button"
                android:textStyle="bold"
                android:background="@color/bg_topbar"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
