<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">
    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="朋友"
            android:textColor="@color/text_black"
            android:textSize="18sp" />
        <ImageButton
            android:id="@+id/add_friends"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/top_button_add"
            android:background="@color/bg_topbar"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/friend_find"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true">
        <Button
            android:id="@+id/button_sousuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
                />
        <!--android:background="@color/bg_gray1"-->
        <ImageView
            android:id="@+id/sousuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_button_find1"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/button_sousuo"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sousuo"
            android:textColor="@color/text_gray"
            android:layout_toRightOf="@id/sousuo"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:paddingLeft="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/new_friends"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:background="@drawable/clicked_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_friends"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/ic_right1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_gray_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_gray1" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#F0F0F0"
                    android:orientation="vertical">

                    <com.example.lsy.myapp.PinnedHeaderExpandableListView
                        android:id="@+id/explistview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="0.0dip"
                        android:cacheColorHint="#00000000"
                        android:choiceMode="singleChoice"
                        android:drawSelectorOnTop="false"
                        android:fastScrollEnabled="false"
                        android:footerDividersEnabled="true"
                        android:groupIndicator="@null"
                        android:scrollbars="vertical"
                        android:scrollingCache="true" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/group_chat"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/clicked_bg"
                        android:clickable="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/add_group"
                            android:text="@string/new_group"
                            android:textColor="@color/text_black"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/add_group"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/add_group" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/bg_gray1" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:id="@+id/official_accounts"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/clicked_bg"
                        android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@+id/accounts_pic"
                        android:text="@string/official_accounts"
                        android:textColor="@color/text_black"
                        android:textSize="18dp" />

                    <ImageView
                        android:id="@+id/accounts_pic"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:src="@mipmap/ic_launcher_round" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/bg_gray1" />
                    </RelativeLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/bg_gray1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray"
        />


</LinearLayout>